# attpc_sentry

./: .env  Cargo.toml  README.md  attpc.sentry.plist  diesel.toml  mmStartSentry.sh
.github/workflows/: ci.yml  docs.yml
migrations/2024-12-23-134532_create_status/: up.sql
src/: data.rs  main.rs  models.rs  schema.rs  sentry.rs  server.rs
