[package]
name = "attpc_sentry"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
sysinfo = "0.33.1"
tokio = { version = "1.42.0", features = ["tokio-macros", "rt-multi-thread", "macros", "signal", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
